# FlopMaster

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  default.nix
arduino/: Makefile  flopmaster.c  flopmaster_pure.c
src/: ardflop.cpp  ardflop.hpp  ardmidi.cpp  ardmidi.hpp  flopcom.cpp  flopcom.hpp  fm_config.cpp.in  fm_config.h  fm_config.h.in  main.cpp  monitor.cpp  monitor.hpp
